Added visibility parameters + minor fixes

--- a/index.html
+++ b/index.html
@@ -202,6 +202,81 @@
             </div>
         </div>
     </section>
+    <section>
+        <h2 class="text-center">Text</h2>
+        <div class="row">
+            <p class="col-3 text-center text-primary">Primary text</p>
+            <p class="col-3 text-center text-muted">Muted / secondary text</p>
+            <p class="col-3 text-center text-success">Success text</p>
+            <p class="col-3 text-center text-error">Error text</p>
+            <p class="col-3 text-center text-warning">Warning text</p>
+            <p class="col-3 text-center text-info">Info text</p>
+            <p class="col-3 text-center text-light">Light text</p>
+            <p class="col-3 text-center text-dark">Dark text</p>
+        </div>
+    </section>
+    <section>
+        <h2 class="text-center">Background</h2>
+        <div class="row">
+            <div style="color: white" class="text-center col-12 bg-primary">Primary background</div>
+            <div style="color: white" class="text-center col-12 bg-muted">Muted background</div>
+            <div style="color: white" class="text-center col-12 bg-success">Success background</div>
+            <div style="color: white" class="text-center col-12 bg-error">Error background</div>
+            <div style="color: white" class="text-center col-12 bg-warning">Warning background</div>
+            <div style="color: white" class="text-center col-12 bg-info">Info background</div>
+            <div style="color: black" class="text-center col-12 bg-light">Light background</div>
+            <div style="color: white" class="text-center col-12 bg-dark">Dark background</div>
+        </div>
+    </section>
+    <section>
+        <h2 class="text-center">Visibility</h2>
+        <div class="row">
+            <div class="text-center col-3 visible-sm">
+                <h3>Visible small</h3>
+                <img class="img-responsive" src="images/498-4989706_singed-png-snow-day-singed-png-transparent-png.png">
+            </div>
+            <div class="text-center col-3 visible-md">
+                <h3>Visible medium</h3>
+                <img class="img-responsive" src="images/498-4989706_singed-png-snow-day-singed-png-transparent-png.png">
+            </div>
+            <div class="text-center col-3 visible-lg">
+                <h3>Visible large</h3>
+                <img class="img-responsive" src="images/498-4989706_singed-png-snow-day-singed-png-transparent-png.png">
+            </div>
+            <div class="text-center col-3 visible-xl">
+                <h3>Visible extra large</h3>
+                <img class="img-responsive" src="images/498-4989706_singed-png-snow-day-singed-png-transparent-png.png">
+            </div>
+            <div class="text-center col-3 hidden-sm">
+                <h3>Hidden small</h3>
+                <img class="img-responsive" src="images/498-4989706_singed-png-snow-day-singed-png-transparent-png.png">
+            </div>
+            <div class="text-center col-3 hidden-md">
+                <h3>Hidden medium</h3>
+                <img class="img-responsive" src="images/498-4989706_singed-png-snow-day-singed-png-transparent-png.png">
+            </div>
+            <div class="text-center col-3 hidden-lg">
+                <h3>Hidden large</h3>
+                <img class="img-responsive" src="images/498-4989706_singed-png-snow-day-singed-png-transparent-png.png">
+            </div>
+            <div class="text-center col-3 hidden-xl">
+                <h3>Hidden extra large</h3>
+                <img class="img-responsive" src="images/498-4989706_singed-png-snow-day-singed-png-transparent-png.png">
+            </div>
+            <div class="col-3"></div>
+            <div class="text-center col-3">
+                <h3>Visible print</h3>
+                <img class="img-responsive img-circle visible-print" src="images/Singed3.png">
+            </div>
+            <div class="text-center col-3">
+                <h3>Hidden print</h3>
+                <img class="img-responsive img-circle hidden-print" src="images/Singed3.png">
+            </div>
+            <div class="col-3"></div>
+        </div>
+    </div>
+    </div>
+    </section>
 </body>
 
 </html>
