--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>SASS</title>
     <link href="SASS/framework.css" rel="stylesheet">
     <link href="style/style.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="js/alerts.js" defer></script>
 </head>
 
 <body>
@@ -34,7 +36,7 @@
             <div style="background: #397e3f" class="text-center col-1">Col 1</div>
         </section>
         <section>
-            <h2 class="text-center">Small columns</h2>
+            <h3 class="text-center">Small columns</h3>
             <div style="background: #f5e8e9" class="text-center col-sm-12">Col 12</div>
             <div style="background:#e9cdcf" class="text-center col-sm-11">Col 11</div>
             <div style="background:#deb4b7" class="text-center col-sm-10">Col 10</div>
@@ -49,7 +51,7 @@
             <div style="background: #7e393f" class="text-center col-sm-1">Col 1</div>
         </section>
         <section>
-            <h2 class="text-center">Medium columns</h2>
+            <h3 class="text-center">Medium columns</h3>
             <div style="background: #e8e8f5" class="text-center col-md-12">Col 12</div>
             <div style="background:#cdcde9" class="text-center col-md-11">Col 11</div>
             <div style="background:#b4b4de" class="text-center col-md-10">Col 10</div>
@@ -64,7 +66,7 @@
             <div style="background: #39397e" class="text-center col-md-1">Col 1</div>
         </section>
         <section>
-            <h2 class="text-center">Large columns</h2>
+            <h3 class="text-center">Large columns</h3>
             <div style="background: #f5f2e8" class="text-center col-lg-12">Col 12</div>
             <div style="background:#e9e2cd" class="text-center col-lg-11">Col 11</div>
             <div style="background:#ded3b4" class="text-center col-lg-10">Col 10</div>
@@ -79,7 +81,7 @@
             <div style="background: #7e6a39" class="text-center col-lg-1">Col 1</div>
         </section>
         <section>
-            <h2 class="text-center">Extra large columns</h2>
+            <h3 class="text-center">Extra large columns</h3>
             <div style="background: #e8f5f5" class="text-center col-xl-12">Col 12</div>
             <div style="background:#cde9e9" class="text-center col-xl-11">Col 11</div>
             <div style="background:#b4dede" class="text-center col-xl-10">Col 10</div>
@@ -94,7 +96,7 @@
             <div style="background: #397e7e" class="text-center col-xl-1">Col 1</div>
         </section>
         <section>
-            <h2 class="text-center">Rows</h2>
+            <h3 class="text-center">Rows</h3>
             <div class="row">
                 <div style="background: #f5f5f5" class="text-center col-12">Col 12</div>
 
@@ -274,8 +276,23 @@
             </div>
             <div class="col-3"></div>
         </div>
-    </div>
-    </div>
+    </section>
+    <section>
+        <h2 class="text-center">Alerts</h2>
+        <div class="container">
+            <div style="justify-content: space-evenly" class="row">
+                <button class="col-1 btn btn-primary">Primary</button>
+                <button class="col-1 btn btn-secondary">Secondary</button>
+                <button class="col-1 btn btn-success">Success</button>
+                <button class="col-1 btn btn-danger">Danger</button>
+                <button class="col-1 btn btn-warning">Warning</button>
+                <button class="col-1 btn btn-info">Info</button>
+                <button class="col-1 btn btn-light">Light</button>
+                <button class="col-1 btn btn-dark">Dark</button>
+            </div>
+            <div id="alert-container" style="padding: 10px;border-radius:10px; border: gray solid 1px; height: 200px; overflow: auto scroll" class="container">
+            </div>
+        </div>
     </section>
 </body>
 
