--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                     </li>
                     <li class="nav-item"><a href="#buttons">Buttons</a></li>
                     <li class="nav-item"><a href="#images">Images</a></li>
+                    <li class="nav-item"><a href="#text">Text</a></li>
+                    <li class="nav-item"><a href="#background">Background</a></li>
+                    <li class="nav-item"><a href="#visibility">Visibility</a></li>
+                    <li class="nav-item"><a href="#alerts">Alerts</a></li>
                 </ul>
             </div>
         </nav>
@@ -43,8 +47,8 @@
 
         <section>
             <h2 class="text-center">Containers</h2>
-            <div style="border: black solid 1px" class="container text-center">Container</div>
-            <div style="background-color: black; color: white" class="container-fluid text-center">Container fluid</div>
+            <div style="border: black solid 1px; margin-bottom: 10px; padding: 10px 0" class="container text-center">Container</div>
+            <div style="background-color: black; color: white; padding: 10px 0" class="container-fluid text-center">Container fluid</div>
         </section>
         <section>
             <h2 id="grid" class="text-center">Grid</h2>
@@ -233,7 +237,7 @@
             </div>
         </section>
         <section>
-            <h2 class="text-center">Text</h2>
+            <h2 id="text" class="text-center">Text</h2>
             <div class="row">
                 <p class="col-3 text-center text-primary">Primary text</p>
                 <p class="col-3 text-center text-muted">Muted / secondary text</p>
@@ -246,7 +250,7 @@
             </div>
         </section>
         <section>
-            <h2 class="text-center">Background</h2>
+            <h2 id="background" class="text-center">Background</h2>
             <div class="row">
                 <div style="color: white" class="text-center col-12 bg-primary">Primary background</div>
                 <div style="color: white" class="text-center col-12 bg-muted">Muted background</div>
@@ -259,7 +263,7 @@
             </div>
         </section>
         <section>
-            <h2 class="text-center">Visibility</h2>
+            <h2 id="visibility" class="text-center">Visibility</h2>
             <div class="row">
                 <div class="text-center col-3 visible-sm">
                     <h3>Visible small</h3>
@@ -314,7 +318,7 @@
             </div>
         </section>
         <section>
-            <h2 class="text-center">Alerts</h2>
+            <h2 id="alerts" class="text-center">Alerts</h2>
             <div class="container">
                 <div style="justify-content: space-evenly" class="row">
                     <button class="col-1 btn btn-primary">Primary</button>
